# plaquette-simulator

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: tests_linux.yml
.github/workflows/: tests_linux.yml
benchmarks/: CMakeLists.txt  run_circuit.cpp  run_circuit.py
doc/: .gitignore  Makefile  conf.py  index.rst  requirements.txt
doc/code/: __init__.rst
plaquette_hpc_simulator/: _version.py
plaquette_hpc_simulator/src/: BatchCliffordStateKokkos.hpp  Bindings.cpp  CliffordStateKokkos.hpp  Error.hpp  GateFunctors.hpp  MeasurementFunctors.hpp
plaquette_hpc_simulator/src/tests/: CMakeLists.txt  Test_BatchCliffordStateKokkos.hpp  Test_CliffordStateKokkos.hpp  Test_Helpers.hpp  runner.cpp
plaquette_simulator/: __init__.py  simulator.py
plaquette_simulator/src/: Bindings.cpp  CliffordCircuit.hpp  CliffordState.hpp  Error.hpp  GateFunctors.hpp  MeasurementFunctors.hpp  MiscFunctors.hpp
plaquette_simulator/src/tests/: CMakeLists.txt  Test_CliffordCircuit.hpp  Test_CliffordState.hpp  Test_CliffordStateKokkos.hpp  Test_Helpers.hpp  runner.cpp
tests/: test_clifford_state.py
